--- a/Pipelines/pipeline-step5-gitleaks.yml
+++ b/Pipelines/pipeline-step5-gitleaks.yml
@@ -101,13 +101,20 @@ stages:
       inputs:
         containerRegistry: ${{ variables.registry }}
         command: 'login'
-    - task: Docker@2
+    #- task: Docker@2
+    #  inputs:
+    #    containerRegistry: ${{ variables.registry }}
+    #    repository: ${{ variables.team }}
+    #    command: 'buildAndPush'
+    #    Dockerfile: '**/Dockerfile'
+    #    tags: ${{ variables.dtap }}
+    - task: Bash@3
       inputs:
-        containerRegistry: ${{ variables.registry }}
-        repository: ${{ variables.team }}
-        command: 'buildAndPush'
-        Dockerfile: '**/Dockerfile'
-        tags: ${{ variables.dtap }}
+        targetType: 'inline'
+        script: |
+          echo "This is where we normally would run Docker buildAndPush."
+          echo "For now we have to fake this."
+          docker pull bkimminich/juice-shop
     - task: Docker@2
       inputs:
         containerRegistry: ${{ variables.registry }}
@@ -130,8 +137,9 @@ stages:
       inputs:
         targetType: 'inline'
         script: |
-          trivy image -f json -o trivy-result.json '${{ variables.registry }}.azurecr.io/${{ variables.team }}:${{ variables.dtap }}'
-    - publish: './trivy-result.json'
+          trivy image -f json -o trivy-result.json 'bkimminich/juice-shop'
+          #trivy image -f json -o trivy-result.json '${{ variables.registry }}.azurecr.io/${{ variables.team }}:${{ variables.dtap }}'    - publish: './trivy-result.json'
+    - publish: './trivy-result.json'    
       artifact: trivy-result.json    
 
 - stage: run_webapp
@@ -147,7 +155,8 @@ stages:
       inputs:
         azureSubscription: ${{ variables.azuresub }}
         appName: ${{ variables.webapp }}
-        containers: '${{ variables.registry }}.azurecr.io/${{ variables.team }}:${{ variables.dtap }}'
+        #containers: '${{ variables.registry }}.azurecr.io/${{ variables.team }}:${{ variables.dtap }}'
+        containers: 'bkimminich/juice-shop'
         appSettings: '-Port 3000 -WEBSITES_PORT 3000'
         configurationStrings: '-acrUseManagedIdentityCreds true'
     
