--- a/Pipelines/pipeline-step5-truffles.yml
+++ b/Pipelines/pipeline-step5-truffles.yml
@@ -83,7 +83,8 @@ stages:
         targetType: 'inline'
         workingDirectory: '$(Build.SourcesDirectory)'
         script: |
-          docker run -v "$(pwd):/pwd" trufflesecurity/trufflehog filesystem /pwd --no-verification --json --fail | tee trufflehog-result.json
+          pwd; ls -al
+          docker run --mount type=bind,src=$(pwd),dst=/pwd trufflesecurity/trufflehog filesystem /pwd --no-verification --json --fail | tee trufflehog-result.json
 
     - publish: '$(Build.SourcesDirectory)/trufflehog-result.json'
       artifact: trufflehog-result.json
