--- a/Lab setup/Vagrantfile
+++ b/Lab setup/Vagrantfile
@@ -6,11 +6,11 @@ lvresize -r -l +40%VG /dev/ubuntu-vg/ubuntu-lv
 
 # Installing pre-requisite software
 apt update
-apt install -y docker.io docker-compose git ripgrep pip python3
+apt install -y docker.io docker-buildx docker-compose git ripgrep pip python3
 
-which docker >/dev/null 2>&1
-if [[ $? -ne 0 ]]; 
-then echo "FAILURE: Docker install failed."; exit 1; fi 
+which docker >/dev/null 2>&1 
+if [[ $? -ne 0 ]];
+then echo "FAILURE: Docker install failed."; exit 1; fi
 
 # Setting up Java and Maven, for Selenium
 apt install -y openjdk-17-jdk
@@ -29,26 +29,22 @@ echo 'export PATH="${M2_HOME}/bin:${PATH}"' >> /etc/profile.d/maven.sh
 chmod +x /etc/profile.d/maven.sh
 
 . /etc/profile.d/maven.sh
-which mvn >/dev/null 2>&1 
+which mvn >/dev/null 2>&1
 if [[ $? -ne 0 ]];
 then echo "FAILURE: Maven install failed."; exit 1; fi
 
 # Installing NodeJS from outside sources.
 curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg
 echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_16.x nodistro main" > /etc/apt/sources.list.d/nodesource.list
-
 apt update
 apt install -y nodejs      # Fetching NodeJS 16 from NodeSource
 
 echo "NODE INSTALLED: $(node --version)"
 if [[ $(node --version | cut -d. -f1) != "v16" ]]
-then echo "FAILURE: wrong Node version."; exit 1; fi 
-
-# Installing alternative and faster NodeJS package manager
-npm install -g pnpm
+then echo "FAILURE: wrong Node version."; exit 1; fi
 
 # Installing Angular
-npm install --location=global @angular/cli@latest
+npm install --location=global @angular/cli@16.2.14
 
 # Installing Chromium, for headless testing.
 apt install -y chromium-browser 
@@ -56,7 +52,8 @@ echo "export CHROME_BIN=\"/snap/bin/chromium\"" >> /etc/bash.bashrc
 echo "export CHROME_BIN=\"/snap/bin/chromium\"" >> /etc/profile
 
 # Setting up and starting Docker.
-usermod -a -G docker vagrant
+# This assumes that you did a "su" or "sudo -i" to become root.
+usermod -a -G docker $(who -s am i | cut -d" " -f1)
 systemctl enable docker
 systemctl start docker
 docker pull hello-world
@@ -79,7 +76,7 @@ mkdir ${HOME}/Nessus
 curl --request GET --url "https://raw.githubusercontent.com/unixerius/DSO/main/Nessus/nessus-docker-compose.yml" --output "${HOME}/Nessus/docker-compose.yml" 
 
 # Pulling zap2docker and Nuclei, which are big too
-docker pull owasp/zap2docker-stable
+docker pull ghcr.io/zaproxy/zaproxy:latest
 docker pull projectdiscovery/nuclei
 
 SCRIPT
