--- a/Lab setup/Vagrantfile
+++ b/Lab setup/Vagrantfile
@@ -105,7 +105,7 @@ Vagrant.configure("2") do |config|
     end
 
     devsecops.vm.provider "virtualbox" do |v|
-      v.memory = 4096          # Change to 8192 if possible
+      v.memory = 4096          # Change to 6144, or 8192 if possible
       v.cpus = 4               # Change to 6 if possible
     end
     devsecops.vm.provision "setup", type: "shell", inline: $script
