--- a/Pipelines/pipeline-step5-gitleaks.yml
+++ b/Pipelines/pipeline-step5-gitleaks.yml
@@ -92,7 +92,8 @@ stages:
       artifact: gitleaks-result.json
 
 - stage: build
-  condition: always()
+  condition: eq(variables['Build.SourceBranch'], 'refs/heads/prod')
+
   jobs: 
   - job: build_and_push_image
     steps:
@@ -112,11 +113,6 @@ stages:
         containerRegistry: ${{ variables.registry }}
         command: 'logout'
 
-#- stage: trivy
-#  condition: eq(variables['Build.SourceBranch'], 'refs/heads/dev')
-#  jobs:
-#  - job: install_and_run
-#    steps:
     - task: Bash@3
       displayName: install_trivy
       inputs:
@@ -136,7 +132,7 @@ stages:
 - stage: run_webapp
   dependsOn:
   - build
-  condition: always()
+  condition: eq(variables['Build.SourceBranch'], 'refs/heads/prod')
 
   jobs:
   - job: update_appsvc_dev
