--- a/Pipelines/pipeline-step6-dast.yml
+++ b/Pipelines/pipeline-step6-dast.yml
@@ -96,7 +96,8 @@ stages:
 
 
 - stage: build
-  condition: always()
+  condition: eq(variables['Build.SourceBranch'], 'refs/heads/prod')
+
   jobs: 
   - job: build_and_push_image
     steps:
@@ -116,11 +117,6 @@ stages:
         containerRegistry: ${{ variables.registry }}
         command: 'logout'
 
-#- stage: trivy
-#  condition: eq(variables['Build.SourceBranch'], 'refs/heads/dev')
-#  jobs:
-#  - job: install_and_run
-#    steps:
     - task: Bash@3
       displayName: install_trivy
       inputs:
@@ -140,7 +136,8 @@ stages:
 - stage: run_webapp
   dependsOn:
   - build
-  condition: always()
+  condition: eq(variables['Build.SourceBranch'], 'refs/heads/prod')
+
   jobs:
   - job: update_appsvc_dev
     steps:
@@ -177,7 +174,7 @@ stages:
         targetType: 'inline'
         workingDirectory: '$(Build.SourcesDirectory)'
         script: |
-          docker run owasp/zap2docker-stable zap-baseline.py -t '${{ variables.webappurl }}' | tee zap-result.txt
+          docker run ghcr.io/zaproxy/zaproxy zap-baseline.py -t '${{ variables.webappurl }}' | tee zap-result.txt
 
     - publish: '$(Build.SourcesDirectory)/zap-result.txt'
       artifact: zap-result.txt
