--- a/Pipelines/pipeline-step4-semgrep.yml
+++ b/Pipelines/pipeline-step4-semgrep.yml
@@ -75,7 +75,7 @@ stages:
         publishLocation: 'Container'
 
 - stage: build
-  condition: always()
+  condition: eq(variables['Build.SourceBranch'], 'refs/heads/prod')
   jobs: 
   - job: build_and_push_image
     steps:
@@ -95,11 +95,6 @@ stages:
         containerRegistry: ${{ variables.registry }}
         command: 'logout'
 
-#- stage: trivy
-#  condition: eq(variables['Build.SourceBranch'], 'refs/heads/dev')
-#  jobs:
-#  - job: install_and_run
-#    steps:
     - task: Bash@3
       displayName: install_trivy
       inputs:
@@ -119,7 +114,7 @@ stages:
 - stage: run_webapp
   dependsOn:
   - build
-  condition: always()
+  condition: eq(variables['Build.SourceBranch'], 'refs/heads/prod')
 
   jobs:
   - job: update_appsvc_dev
