move build and run to main, not prod.

--- a/Pipelines/pipeline-step3-trivy.yml
+++ b/Pipelines/pipeline-step3-trivy.yml
@@ -87,7 +87,7 @@ stages:
 - stage: run_webapp
   dependsOn:
   - build
-  condition: eq(variables['Build.SourceBranch'], 'refs/heads/prod')
+  condition: eq(variables['Build.SourceBranch'], 'refs/heads/main')
 
   jobs:
   - job: update_appsvc_dev
