--- a/Pipelines/pipeline-step5-truffles.yml
+++ b/Pipelines/pipeline-step5-truffles.yml
@@ -90,7 +90,7 @@ stages:
       artifact: trufflehog-result.json
 
 - stage: build
-  condition: eq(variables['Build.SourceBranch'], 'refs/heads/prod')
+  condition: eq(variables['Build.SourceBranch'], 'refs/heads/main')
 
   jobs: 
   - job: build_and_push_image
@@ -130,7 +130,7 @@ stages:
 - stage: run_webapp
   dependsOn:
   - build
-  condition: eq(variables['Build.SourceBranch'], 'refs/heads/prod')
+  condition: eq(variables['Build.SourceBranch'], 'refs/heads/main')
 
   jobs:
   - job: update_appsvc_dev
