--- a/Pipelines/pipeline-step6-dast.yml
+++ b/Pipelines/pipeline-step6-dast.yml
@@ -96,7 +96,7 @@ stages:
 
 
 - stage: build
-  condition: eq(variables['Build.SourceBranch'], 'refs/heads/prod')
+  condition: eq(variables['Build.SourceBranch'], 'refs/heads/main')
 
   jobs: 
   - job: build_and_push_image
@@ -136,7 +136,7 @@ stages:
 - stage: run_webapp
   dependsOn:
   - build
-  condition: eq(variables['Build.SourceBranch'], 'refs/heads/prod')
+  condition: eq(variables['Build.SourceBranch'], 'refs/heads/main')
 
   jobs:
   - job: update_appsvc_dev
