--- a/Pipelines/pipeline-step1b-build-test-run.yml
+++ b/Pipelines/pipeline-step1b-build-test-run.yml
@@ -39,6 +39,7 @@ stages:
           npm install
     - task: Bash@3
       displayName: run_and_test_juiceshop
+      continueOnError: true
       inputs:
         targetType: 'inline'
         script: |
