--- a/Pipelines/pipeline-step4-semgrep.yml
+++ b/Pipelines/pipeline-step4-semgrep.yml
@@ -75,7 +75,7 @@ stages:
         publishLocation: 'Container'
 
 - stage: build
-  condition: eq(variables['Build.SourceBranch'], 'refs/heads/main')
+  condition: always()
   jobs: 
   - job: build_and_push_image
     steps:
