--- a/Pipelines/pipeline-step5-truffles.yml
+++ b/Pipelines/pipeline-step5-truffles.yml
@@ -90,7 +90,7 @@ stages:
       artifact: trufflehog-result.json
 
 - stage: build
-  condition: eq(variables['Build.SourceBranch'], 'refs/heads/main')
+  condition: always()
 
   jobs: 
   - job: build_and_push_image
