--- a/Pipelines/pipeline-step6-dast.yml
+++ b/Pipelines/pipeline-step6-dast.yml
@@ -96,7 +96,7 @@ stages:
 
 
 - stage: build
-  condition: eq(variables['Build.SourceBranch'], 'refs/heads/main')
+  condition: always()
 
   jobs: 
   - job: build_and_push_image
