--- a/Nessus/nessus-docker-compose.yml
+++ b/Nessus/nessus-docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   nessus:
     image: tenable/nessus:latest-ubuntu
-    restart: always
+    restart: unless-stopped
     container_name: nessus
     environment:
       USERNAME: tess
